# observable_json_ai_generated

./: .gitignore  CMakeLists.txt  README.md  test.sh
axzdict/: CMakeLists.txt  README_ENHANCED.md  axz_actions.h  axz_defines.h  axz_dict.cpp  axz_dict.h  axz_dict_compat.h  axz_dict_enhanced_test.cpp  axz_dict_stepper.h  axz_error_codes.h  axz_exit_codes.h  axz_json.cpp  axz_keys.h  axz_methods.h  axz_names.h  axz_products_label.h  axz_version.h
cmake/: ObservableJsonConfig.cmake.in  UniversalObservableJsonConfig.cmake.in
examples/: basic_example.cpp  enhanced_demo.cpp  multi_backend_demo.cpp  performance_comparison.cpp
include/: observable_json.h  universal_json_adapter.h  universal_observable_json.h
scripts/: comprehensive_analysis.sh  helgrind_analysis.sh  performance_comparison.sh  test_all_backends.sh  valgrind_analysis.sh
source/: main.cpp
tests/: comprehensive_test.cpp
